Fixed z-index in `b-toggle-menu`

--- a/client/stylesheet/blocks/_b-toggle-menu.scss
+++ b/client/stylesheet/blocks/_b-toggle-menu.scss
@@ -15,5 +15,6 @@
         position: absolute;
         right: 0;
         margin-top: 10px;
+        z-index: 1;
     }
 }
